--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -31,4 +31,6 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 #sc-container {
    border: 0px solid black;
    border-radius: 20px;
+   height:auto;
+   width: auto;
  }
