--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -28,7 +28,9 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
     margin-left: 5px;
     margin-right: 10px;
 }
-#sc-container {
+
+/* Screensot styles */
+.screensc {
    border: 0px solid black;
    border-radius: 20px;
    height:auto;
