--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -33,6 +33,13 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 .screensc {
    border: 0px solid black;
    border-radius: 20px;
-   height:auto;
-   width: auto;
+   height: 500px;
+   width: 282.5px;
  }
+
+ /* General Styles */
+
+.list-group{
+  border: none;
+  
+}
