--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -41,6 +41,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 
 .list-group{
   border: 0px solid black;
+  box-sizing: none;
 
 }
 
@@ -48,7 +49,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
   margin-left: 25px;
   margin-right: 25px;
   width: auto;
-  height: 9px;
-  border: 3px solid #333;
+  height: 6px;
+  border: 3px solid  #474747;
   border-radius: 6px;
 }
