--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -56,7 +56,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
   border: none;
 }
 
-li .list-group-item{
+.list-group-item{
   list-style-type: decimal;
   border: none;
   box-sizing: none;
