trying to get list dots to show

--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -49,6 +49,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 
 .list-group{
   border: 0px solid black;
+  list-style-type: decimal;
   box-sizing: none;
 }
 
