--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -69,11 +69,12 @@ li {
   padding-bottom: 1px;
 }
 
-.depictionspacer {
-  margin-left: 25px;
-  margin-right: 25px;
-  width: auto;
-  height: 6px;
-  border: 3px solid  #474747;
-  border-radius: 6px;
+.mainlist {
+  border: 3px solid gray;
+  border-radius: 5px;
+}
+
+.mainlist-item {
+  list-style-type: disc;
+  
 }
