--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -70,11 +70,11 @@ li {
 }
 
 .mainlist {
-  border: 3px solid gray;
-  border-radius: 5px;
+  /* border: 3px solid gray;
+  border-radius: 5px; */
 }
 
 .mainlist-item {
   list-style-type: disc;
-  
+  margin-left: -5px;
 }
