--- a/depictions/web/style.css
+++ b/depictions/web/style.css
@@ -32,7 +32,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 /* Screensot styles */
 .screensc {
    border: 0px solid black;
-   border-radius: 20px;
+   border-radius: 30px;
    height: 500px;
    width: 282.5px;
  }
@@ -55,7 +55,7 @@ html.can-touch .link-item:active{ /* disable hover effect when input is touch */
 
 .thumbnail {
   border: none;
-  margin-left: -50px;
+  margin: 0px;
 }
 
 li {
